--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         uses: ./.github/actions/setup
       - name: Build package
-        run: pnpm build
+        run: bun run build
       - name: Create snapshot
         id: snapshot
         run: pnpx pkg-pr-new@0.0.24 publish --pnpm --comment=off
